Station docks (#293)
Co-authored-by: github-actions[bot] <41898282+github-actions[bot]@users.noreply.github.com>